--- a/force-app/main/triggers-implementation/classes/IntegrationPatientReferralTriggerHandler.cls
+++ b/force-app/main/triggers-implementation/classes/IntegrationPatientReferralTriggerHandler.cls
@@ -4,91 +4,113 @@
 
 public without sharing class IntegrationPatientReferralTriggerHandler {
     
-    public class RequiredFieldsAndParticipantDuplicatesCheck extends TriggerHandler {
-        
-        public override void beforeInsert(List<SObject> newList) {
-            checkRecords(newList);
-        }
-    }
-    
     private static final List<String> SS_STATUSES_ACCEPT_REFERRALS = new List<String>{
             StudySiteService.PI_S_ACCEPTED,
             StudySiteService.PI_S_ACCEPTED_A,
             StudySiteService.PI_S_INVITATION_SENT
     };
     
-    private static void checkRecords(List<Integration_Patient_Referral__c> newList) {
-        List<String> protocolIds = new List<String>();
-        List<String> ssNumberList = new List<String>();
-        List<Participant__c> newParticipants = new List<Participant__c>();
-        for (Integration_Patient_Referral__c record : newList) {
-            protocolIds.add(record.protocolId__c);
-            ssNumberList.add(record.protocolId__c + '_' + record.siteSelected__c);
-            newParticipants.add(convertToParticipant(record));
+    public class RequiredFieldsAndParticipantDuplicatesCheck extends TriggerHandler {
+        
+        public override void beforeInsert(List<SObject> newList) {
+            setNewList(newList);
+            checkFields();
+            upsertParticipantAndPE();
         }
-        //SS Map
-        Map<String, Study_Site__c> ssByPrimaryKeyEPRMap = new Map<String, Study_Site__c>();
-        List<Study_Site__c> ssList = [
-                SELECT Id, Protocol_ID__c,
-                        Override_PI_Referral_Status__c
-                FROM Study_Site__c
-                WHERE Primary_Key_ePR__c IN:ssNumberList
-        ];
-        for (Study_Site__c ss : ssList) ssByPrimaryKeyEPRMap.put(ss.Primary_Key_ePR__c, ss);
         
-        //CTP Map
-        Map<String, Clinical_Trial_Profile__c> ctpByProtocolIdMap = new Map<String, Clinical_Trial_Profile__c>();
-        List<Clinical_Trial_Profile__c> ctpList = [
-                SELECT id, Override_Recruitment_Status__c
-                FROM Clinical_Trial_Profile__c
-                WHERE Protocol_Id__c IN:protocolIds
-        ];
-        for (Clinical_Trial_Profile__c ctp : ctpList) ctpByProtocolIdMap.put(ctp.Protocol_ID__c, ctp);
-        
-        //process items:
-        for (Integration_Patient_Referral__c record : newList) {
-            List<String> errorsLog = new List<String>();
-            //Required fields check:
-            if (String.isEmpty(record.siteSelected__c)) errorsLog.add('Required field is missing: siteSelected;');
-            if (String.isEmpty(record.protocolId__c)) errorsLog.add('Required field is missing: protocolId;');
-            if (String.isEmpty(record.firstName__c)) errorsLog.add('Required field is missing: firstName__c;');
-            if (String.isEmpty(record.lastName__c)) errorsLog.add('Required field is missing: lastName__c;');
-            if (String.isEmpty(record.email__c) &&
-                    String.isEmpty(record.phone__c)) errorsLog.add('Either email or phone number must be provided;');
-            
-            //Check SS
-            String studySiteNumber = record.protocolId__c + '_' + record.siteSelected__c;
-            Study_Site__c ss = ssByPrimaryKeyEPRMap.get(studySiteNumber);
-            if (ss == null) {
-                errorsLog.add('Study Site: ' + studySiteNumber + ' not found;');
-            } else if (!SS_STATUSES_ACCEPT_REFERRALS.contains(ss.Override_PI_Referral_Status__c)) {
-                errorsLog.add('StudySite is not accepting referrals;');
+        private Map<String, Study_Site__c> ssByPrimaryKeyEPRMap = new Map<String, Study_Site__c>();
+        private Map<String, Clinical_Trial_Profile__c> ctpByProtocolIdMap = new Map<String, Clinical_Trial_Profile__c>();
+        private List<Integration_Patient_Referral__c> newList;
+    
+    
+        private void setNewList(List<Integration_Patient_Referral__c> newList){
+            this.newList = newList;
+            List<String> protocolIds = new List<String>();
+            List<String> ssNumberList = new List<String>();
+            for (Integration_Patient_Referral__c record : newList) {
+                protocolIds.add(record.protocolId__c);
+                ssNumberList.add(record.protocolId__c + '_' + record.siteSelected__c);
             }
+            //SS Map
+            List<Study_Site__c> ssList = [
+                    SELECT Id, Protocol_ID__c,
+                            Override_PI_Referral_Status__c
+                    FROM Study_Site__c
+                    WHERE Primary_Key_ePR__c IN:ssNumberList
+            ];
+            for (Study_Site__c ss : ssList) ssByPrimaryKeyEPRMap.put(ss.Primary_Key_ePR__c, ss);
+    
+            //CTP Map
+            List<Clinical_Trial_Profile__c> ctpList = [
+                    SELECT id, Override_Recruitment_Status__c
+                    FROM Clinical_Trial_Profile__c
+                    WHERE Protocol_Id__c IN:protocolIds
+            ];
+            for (Clinical_Trial_Profile__c ctp : ctpList) ctpByProtocolIdMap.put(ctp.Protocol_ID__c, ctp);
+        }
+    
+        private void checkFields() {
+            //process items:
+            for (Integration_Patient_Referral__c record : newList) {
+                List<String> errorsLog = new List<String>();
+                //Required fields check:
+                if (String.isEmpty(record.siteSelected__c)) errorsLog.add('Required field is missing: siteSelected;');
+                if (String.isEmpty(record.protocolId__c)) errorsLog.add('Required field is missing: protocolId;');
+                if (String.isEmpty(record.firstName__c)) errorsLog.add('Required field is missing: firstName__c;');
+                if (String.isEmpty(record.lastName__c)) errorsLog.add('Required field is missing: lastName__c;');
+                if (String.isEmpty(record.email__c) &&
+                        String.isEmpty(record.phone__c)) errorsLog.add('Either email or phone number must be provided;');
             
-            //Check CTP
-            Clinical_Trial_Profile__c ctp = ctpByProtocolIdMap.get(record.protocolId__c);
-            if (ctp == null) {
-                errorsLog.add('Study: ' + record.protocolId__c + ' not found;');
-            } else if(ctp.Override_Recruitment_Status__c != TrialService.STATUS_ACTIVELY_ENROLLING) {
-                errorsLog.add('Study is not accepting referrals;');
-            }
-            if (errorsLog.size() > 0) {
-                throw new PatientIntegrationException(String.join(errorsLog, '\n'));
-            }
-            
-            ParticipantDuplicateService duplicateService = new ParticipantDuplicateService(newParticipants);
-            for(Participant__c participant : newParticipants){
-                if(duplicateService.findDuplicate(participant) != null){
-                    //TODO
-                }else{
-                    //TODO
+                //Check SS
+                String studySiteNumber = record.protocolId__c + '_' + record.siteSelected__c;
+                Study_Site__c ss = ssByPrimaryKeyEPRMap.get(studySiteNumber);
+                if (ss == null) {
+                    errorsLog.add('Study Site: ' + studySiteNumber + ' not found;');
+                } else if (!SS_STATUSES_ACCEPT_REFERRALS.contains(ss.Override_PI_Referral_Status__c)) {
+                    errorsLog.add('StudySite is not accepting referrals;');
                 }
+            
+                //Check CTP
+                Clinical_Trial_Profile__c ctp = ctpByProtocolIdMap.get(record.protocolId__c);
+                if (ctp == null) {
+                    errorsLog.add('Study: ' + record.protocolId__c + ' not found;');
+                } else if (ctp.Override_Recruitment_Status__c != TrialService.STATUS_ACTIVELY_ENROLLING) {
+                    errorsLog.add('Study is not accepting referrals;');
+                }
+                if (errorsLog.size() > 0) throw new PatientIntegrationException(String.join(errorsLog, '\n'));
+            }
+        }
+    
+        private void upsertParticipantAndPE() {
+            List<String> refIds = new List<String>();
+            Map<String, Participant__c> newParticipantsMap = new Map<String, Participant__c>();
+            for (Integration_Patient_Referral__c ipr : newList) {
+                newParticipantsMap.put(ipr.ePRPatient_ID_Number__c, convertToParticipant(ipr));
+                refIds.add(ipr.ePRPatient_ID_Number__c);
             }
         
+            //Duplicates check and upsert participant
+            ParticipantDuplicateService duplicateService = new ParticipantDuplicateService(newParticipantsMap.values());
+            for (Integration_Patient_Referral__c ipr : newList) {
+                Participant__c participant = newParticipantsMap.get(ipr.ePRPatient_ID_Number__c);
+                Participant__c duplicate = duplicateService.findDuplicate(participant);
+                if (duplicate != null) newParticipantsMap.put(ipr.ePRPatient_ID_Number__c, duplicate);
+            }
+            upsert newParticipantsMap.values();
+        
+            //Insert PE
+            List<Participant_Enrollment__c> peList = new List<Participant_Enrollment__c>();
+            for (Integration_Patient_Referral__c ipr : newList) {
+                Participant__c participant = newParticipantsMap.get(ipr.ePRPatient_ID_Number__c);
+                Study_Site__c ss = ssByPrimaryKeyEPRMap.get(ipr.ePRPatient_ID_Number__c);
+                peList.add(createPE(ipr, participant.Id, ss.Id));
+            }
+            insert peList;
         }
     }
     
-    private static Participant__c convertToParticipant(Integration_Patient_Referral__c ipr){
+    
+    private static Participant__c convertToParticipant(Integration_Patient_Referral__c ipr) {
         return new Participant__c(
                 First_Name__c = ipr.firstName__c,
                 Last_Name__c = ipr.lastName__c,
@@ -106,5 +128,20 @@ public without sharing class IntegrationPatientReferralTriggerHandler {
         );
     }
     
+    private static Participant_Enrollment__c createPE(Integration_Patient_Referral__c ipr, Id participantId, Id ssId) {
+        return new Participant_Enrollment__c(
+                Participant__c = participantId,
+                Study_Site__c = ssId,
+                Pre_Eligibility__c = ipr.Pass_Fail__c,
+                Referral_Source__c = ipr.Data_Source__c,
+                Participant_ID_randomized_ID__c = ipr.ePRPatient_ID_Number__c,
+                Referral_ID__c = ipr.referralID__c,
+                Participant_Status__c = ParticipantEnrollmentService.PART_STATUS_REFERRAL_SENT_TO_PI,
+                Terms_and_Conditions_Accepted_Date__c = ipr.acceptedTermsAndConditions__c != null ? Date.valueOf(ipr.acceptedTermsAndConditions__c) : null,
+                Referred_Date__c = ipr.Referred_Date__c != null ? Date.valueOf(ipr.Referred_Date__c) : null,
+                Referred_By__c = 'Other'
+        );
+    }
+
 
 }
